@@ -1,29 +1,41 @@
-To run the Cloud Foundry unit tests, a local properties text file should be passed as a VM argument in the unit test launch configuration. 
-The plain text properties file should contain the following two lines:
+To run the Cloud Foundry unit tests, a local properties text file should be passed as a VM argument in the unit test
+launch configuration. 
 
-username : [Cloud Foundry server user email]
-password : [Cloud Foundry server password]
+The plain text properties file should contain:
+
+url: [target Cloud URL]
+username: [your username]
+password: [your password]
+org: [Cloud organisation]
+space: [Cloud space]
 
 The full path location of the file should then be specified by the VM argument:
 
 -Dtest.credentials=[full path file location]
 
-The username must be a valid user email registered to the http://api.cloudfounry.com server. 
 
 Example:
 
 /User/myuser/testing/CFcredentials.txt contains:
 
-username : myusername@mydomain.com
-password : mypassword
+url: api.run.pivotal.io
+username: myusername@pivotal.io
+password: mypassword
+org: PivotalOrg
+space: TestSpace
 
 
 The file location is then passed as a VM argument:
 
 -Dtest.credentials=/User/myuser/testing/CFcredentials.txt
 
+The URL in the properties file can also include "http://" or "https://", instead of just the host:
 
-See:
-http://start.cloudfoundry.com/tools/STS/configuring-STS.html
+url: https://api.run.pivotal.io
 
-on how to register a new user and password in api.cloudfoundry.com server.
+
+A "CF Base Tests.launch" configuration is provided with the VM args needed to run the Junits:
+
+-Xmx1024M -XX:PermSize=256M -XX:MaxPermSize=256M -Dtest.credentials=/User/myuser/testing/CFcredentials.txt
+
+However, the test.credentials arg needs to be modified to point to your local credentials text file.
